fixed ray tests and cleaned up other things